# nawex-hybrid-devops-platform

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  finops-sre.yml  terraform.yml
app/nawex-api/: Dockerfile  app.py
app/nawex-api/tests/: test_app.py
app/nawex-llm-gateway/: Dockerfile  app.py
app/nawex-llm-gateway/tests/: conftest.py  test_app.py
app/nawex-rag-service/: app.py
app/nawex-rag-service/tests/: test_app.py
app/nawex-web-ui/: Dockerfile  index.html
app/nawex-worker/: Dockerfile  worker.py
architecture/: nawex-platform-diagram.md  onboarding.md  platform-learning-guide.md  platform-operations-reference.md  sli-slo-model.md
finops-aiops/python/: _common.py  anomaly_detector.py  budget_burn_predictor.py  notify_slack.py  rightsizing_engine.py  slo_risk_checker.py
finops-aiops/python/tests/: test_analyzers.py
gitops/: project.yaml  root-application.yaml
gitops/apps/: aws-eks-platform.yaml  azure-aks-platform.yaml  dev-platform.yaml  onprem-platform.yaml  openshift-platform.yaml  prod-platform.yaml  staging-platform.yaml
gitops/argocd/: project.yaml  root-application.yaml
gitops/argocd/apps/: prod-platform.yaml  staging-platform.yaml
gitops/local/: root-application.yaml
gitops/local/apps/: local-platform.yaml
infra/ansible/compliance/: audit-rules.conf  cis-checklist.md
infra/ansible/docs/: baseline-explained.md
infra/ansible/playbooks/: baremetal-firmware-baseline.yml  linux-baseline.yml  vsphere-join-cluster.yml
infra/ansible/scripts/: cost_check.sh  harden.sh  install_monitoring.sh
k8s/base/: kustomization.yaml  platform.yaml
k8s/overlays/aws-eks/: kustomization.yaml  migrated-namespace.yaml  patch-api.yaml
migration/: README.md
migration/assess/: sample-inventory.json  vm_inventory.py
migration/containerize/: containerize.py
migration/samples/: legacy-billing-api-openshift.yaml  legacy-inventory-worker.yaml  legacy-reporting-api.yaml
migration/schemas/: workload-profile.schema.json
migration/tests/: conftest.py  test_containerize.py
observability/alertmanager/: alertmanager.yml
observability/alerts/: slo-alerts.yml
observability/dynatrace/: dynatrace-operator.yaml
observability/prometheus/: prometheus.yml
runbooks/: bare-metal-ocp-operations.md  cost-optimization.md  incident-response.md  k8s-troubleshooting.md  openshift-operations.md  platform-implementation-runbook.md  rollback.md  slack-alerting.md  troubleshooting.md  vm-to-k8s-migration.md
scripts/: alert_webhook.py  bootstrap.sh  deploy.sh  incident_respond.sh  smoke_test.sh  start_local_gitops.sh  stop_local_gitops.sh
scripts/remediations/: investigate_slo_burn.sh  reduce_requests.sh  rollback_last_deploy.sh  scale_down_offhours.sh  worker_heap_profile.sh
(+83 files in other folders)
