[project]
name = "nawex-hybrid-devops-platform"
version = "0.1.0"
description = "Reference hybrid DevOps, FinOps, SRE, and AIOps platform"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".local", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E", "F", "W",    # pycodestyle / pyflakes
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "SIM",            # simplify
  "PL",             # pylint
  "RUF",            # ruff-specific
  "S",              # bandit security
]
ignore = [
  "PLR0913",        # too many arguments
  "PLR2004",        # magic numbers: noisy for deterministic reports / thresholds
  "PLW0603",        # global statement (shutdown flag pattern)
  "S101",           # assert used (fine in tests)
  "S603", "S607",   # subprocess without shell=True (we use list args on purpose)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "PLR2004"]
"**/test_*.py" = ["S", "PLR2004"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["finops-aiops/python/tests", "app/nawex-api/tests"]
addopts = "-ra --strict-markers --import-mode=importlib"
pythonpath = ["app/nawex-api", "finops-aiops/python", "scripts"]
